2003-09-17  Daniel Jacobowitz  <drow@mvista.com>

	* config/rs6000/sysv4.h (LIB_LINUX_SPEC): Give -lpthread before -lc.

2003-09-17  Richard Henderson  <rth@redhat.com>

	* cfg.c (dump_flow_info): Skip register dump if reg_n_info null.

2003-09-17  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in (gcc_cv_ld_hidden): Don't test gnu_ld_flag.
	* configure: Regenerate.

2003-09-17  Mark Mitchell  <mark@codesourcery.com>

	PR debug/12066
	* dbxout.c (dbxout_init): Use a langhook to find builtin types.
	* langhooks-def.h (lhd_return_null_tree_v): New function.
	(LANG_HOOKS_BUILTIN_TYPE_DECLS): New macro.
	(LANG_HOOKS_DECLS): Add it to the intializer.
	* langhooks.c (lhd_return_null_tree_v): New function.
	* langhooks.h (lang_hooks_for_decls): Add builtin_type_decls.

2003-09-17  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Quote gcc_config_arguments for configargs.h.
	* configure: Regenerated.
	* gccbug.in: Don't shell-expand gcc_config_arguments.

2003-09-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/11357
	* c-pretty-print.c (pp_c_floating_constant): Append
	type-annotation to floating constants.

2003-09-17  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/mips/iris5.h (TARGET_OS_CPP_BUILTINS): Define _LONGLONG.
	Define _ABIO32.
	Use it for _MIPS_SIM.
	* config/mips/iris6-o32.h (TARGET_OS_CPP_BUILTINS): Removed.

	* config/mips/iris6-o32-as.h (SUBTARGET_ASM_OPTIMIZING_SPEC):
	Moved ...
	* config/mips/iris5.h (SUBTARGET_ASM_OPTIMIZING_SPEC): ... here,
	updating comment.
	Fixes PR target/10190.

2003-09-17  Daniel Jacobowitz  <drow@mvista.com>

	* config/rs6000/sysv4.h (LIB_LINUX_SPEC): Make -pthread apply
	to shared libraries.

2003-09-17  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/11646
	* cfgrtl.c (purge_dead_edges) [JUMP_INSN]: Rematerialize the
	EDGE_ABNORMAL flag for EH edges.
	* toplev.c (rest_of_handle_cse): Delete unreachable blocks
	if dead edges were purged.
