@@ -1,3 +1,7 @@
+2003-09-17  Richard Henderson  <rth@redhat.com>
+
+	* semantics.c (expand_body): Don't save/restore input_location.
+
 2003-09-17  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/12266
